@@ -1,0 +1,22 @@
+[[@xxmHeaders]][[!var
+u,p:string;
+]][[
+u:=Context.ContextString(csAuthUser);
+p:=Context.ContextString(csAuthPassword);
+if u='' then
+ begin
+  Context.SetStatus(401,'AUTHENTICATION REQUIRED');
+  (Context as IxxmHttpHeaders).ResponseHeaders['WWW-Authenticate']:='Basic realm="xxm demo 11 (type anything but blank)"';
+  <<h1>Authentication required</h1>>
+ end
+else
+ begin
+  <<html>
+  <body>
+  <h1>Demo Basic Authentication</h1>
+  <p>Welcome <b>>=u<</b></p>
+  <p>You've used password <b>>=p<</b></p>
+  <p><a href="Default.xxm">back</a></p>
+  </body>
+  </html>>
+ end;
